--- a/main.html
+++ b/main.html
@@ -63,76 +63,28 @@
       <h4>{{message}}</h4>
       {% endif %}
 
-      <div style="clear:both;"></div>
-
+      <br>
       <h3>What's your destination?</h3>
-      <form id="DestinationForm" method="post" action="/Main">
-      <label for="destination"></label>
-      <input type="text" id="destination" name="destination" size=60 style="float:left;height:30px;margin-left: 40px;margin-top:15px;">
-      <input type="submit" id="destination-submit" style="float:left;margin-left:10px;width:40px; height:30px" value="Go" />
-      </form>
-
-
+      <input type="text" id="searchTextField">
       <div style="clear:both;"></div>
-      <br><br><br>
-      <input type="button" id="mbta-button" class="mbta-button" onclick="showMBTA();" value="See Nearest MBTA Options" style="margin-left: 40px">
-      <input type="button" id="lyft-button" class="lyft-button" onclick="showLyft();" value="See Nearest Lyft Options" style="margin-left: 45px">
-
-      <div style="clear:both;"></div>
-
+      <input type="button" class="mbta-button" value="See Nearest MBTA Options">
+      <input type="button" class="lyft-button" value="See Lyft Options">
     </div>
 
-    <div id="mbta-view" style="display:none">
 
-      <h2> MBTA Results </h2>
-      {% for your_list_element in mbta_info %}
-            {% if 'miles' in your_list_element %}
-                <p><a href="http://www.google.com">{{ your_list_element }}</a> </p>
-            {% else %}
-                <p>{{ your_list_element }} </p>
-            {% endif %}
-
-      {% endfor %}
-
-    </div>
-
-    <div id="lyft-view" style="display:none">
-
-    </div>
+<!--     <div id="mbta">
+ -->       
 
     <script>
 
       function initialize() {
 
-      var input = document.getElementById('destination');
+      var input = document.getElementById('searchTextField');
       var autocomplete = new google.maps.places.Autocomplete(input);
       }
       google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
-
-<!--     <script>
-      $('#DestinationForm').submit(function (){
-        return false;
-      });
-    </script> -->
-
-    <script>
-    function showMBTA() {  
-      if (document.getElementById('mbta-view').style.display == 'none') {
-            document.getElementById('display').style.display = 'none';
-            document.getElementById('mbta-view').style.display = 'block';
-      }
-    }
-
-    function showLyft() {  
-      if (document.getElementById('lyft-view').style.display == 'none') {
-            document.getElementById('display').style.display = 'none';
-            document.getElementById('lyft-view').style.display = 'block';
-      }
-    }
-    </script>
-
 
     <script>
       // Note: This example requires that you consent to location sharing when
